Part 4 : added new methods

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <title>tamagotchi OOP</title>
     <!-- DECOUPLED JS FILES -->
     <!-- tamagotchi is loaded first -->
-    <script src="tamagotchi.js"></script>
+    <script src="tamagotchi.js" type="module"></script>
     <!-- player is loaded afterwards so that it may refer to tamagotchi -->
-    <script type="text/javascript" src="player.js"></script>
+    <script type="module" src="player.js" ></script>
   </head>
   <body>
 
